# web-lab-scanner

./: .gitattributes  .gitignore  LICENSE  README.md  SCOPE.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-python.yml
configs/: dvwa.yaml  juice_shop.yaml
docs/: architecture.md
examples/: sample_report.html  sample_report.json
src/web_lab_scanner/: cli.py  config.py  crawler.py  http_client.py  models.py  scanner.py  session_manager.py
src/web_lab_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/web_lab_scanner/analyzers/: cookies.py  csrf.py  forms.py  headers.py  sqli.py  xss.py
src/web_lab_scanner/reporters/: html_reporter.py  json_reporter.py
tests/: test_cli.py  test_cookies.py  test_crawler.py  test_csrf.py  test_forms.py  test_headers.py  test_integration_mock_app.py  test_reporters.py  test_session_manager.py  test_smoke.py  test_sqli.py  test_xss.py
